<resources>
    <!-- Common Strings -->
    <string name="app_name">DiscoverMada</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_icon_search">Search</string>
    <string name="log_out">Logout</string>
    <string name="title_details">Details</string>

    <!-- Preference User -->
    <string name="preference">Preferences</string>
    <string name="drak_mode">Dark mode</string>
    <string name="default_laguage">Default language</string>
    <string name="default_restor">Restore Defaults</string>
    <string name="restor_sumary">Restore default settings</string>

    <string name="notification_settings">Notification Settings</string>
    <string name="notification">Welcome Notification</string>
    <string name="notification_enabled_summary">Welcome notifications are enabled.</string>
    <string name="notification_disabled_summary">Welcome notifications are disabled.</string>

    <string name="appearance_settings">Appearance Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_enabled_summary">Dark mode is enabled.</string>
    <string name="dark_mode_disabled_summary">Dark mode is disabled.</string>

    <string name="default_language">Default Language</string>
    <string name="select_language">Select Language</string>

    <!-- Message Box -->
    <string name="restor_title_show">Restore Defaults</string>
    <string name="exit_app_message">Are you sure you want to quit the application?</string>
    <string name="restor_message_show">Do you want to restore default settings?</string>
    <string name="restor_accept_show">Yes</string>
    <string name="restor_refuse_show">No</string>

    <!-- Welcome message -->
    <string name="welcome_notif_message">Welcome to our app! Explore the sights of Madagascar with our application. Discover unique content, beautiful images and exciting videos. Need help? Contact us anytime. Enjoy your trip! The DiscoverMada team</string>

    <!-- App Text -->
    <string name="title_list_spot">The best tourist attractions of Madagascar</string>
    <string name="sub_title_list_spot">Guides of the best tourist attractions to discover during your trip to Madagascar</string>

    <!--Ecran login -->
    <string name="email_input_login">Email or username</string>
    <string name="password_input_login">Password</string>
    <string name="button_login">Signing</string>
    <string name="signup_link_login">No account?Create one</string>

    <!--Ecran incscription -->
    <string name="email_input_signup">Email</string>
    <string name="username_input_signup">Username</string>
    <string name="signup_button">Signup</string>
    <string name="confirm_password">Confirm password</string>

    <!--logout screen -->
    <string name="confirm_logout">Do you want to logout?</string>
    <string name="button_validate">Yes</string>
    <string name="button_cancel">Cancel</string>

    <string-array name="langues">
        <item>French</item>
        <item>English</item>
    </string-array>

    <string-array name="lang_values">
        <item>fr</item>
        <item>en</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
