<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference">

        <SwitchPreference
            app:defaultValue="true"
            app:key="notif_preference"
            app:title="@string/notifcation" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="mod_preference"
            app:title="@string/drak_mode"/>

        <ListPreference
            app:defaultValue="fr"
            app:entries="@array/langues"
            app:entryValues="@array/lang_values"
            app:key="lang_preference"
            app:title="@string/default_laguage"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <Preference
        app:key="restore_default_preference"
        app:title="@string/default_restor"
        app:summary="@string/restor_sumary"
        app:icon="@drawable/restore" />

</PreferenceScreen>